Do not create directory with save files
If said directory mounts as a Docker-NFS volume,
container breaks with "can't chmod", since this directory
alread exists in container's filesystem.

--- a/container/proton/Dockerfile
+++ b/container/proton/Dockerfile
@@ -43,9 +43,8 @@ RUN groupadd -g $CONTAINER_GID steam \
 
 USER steam
 
-RUN echo "Creating game dirs" \
-    && mkdir "$ENSHROUDED_PATH" \
-    && mkdir -p "${ENSHROUDED_PATH}/savegame"
+RUN echo "Creating root game dir" \
+    && mkdir "$ENSHROUDED_PATH"
 
 RUN echo "Loading SteamCMD" \
     && mkdir -p "${STEAMCMD_PATH}/steamapps/compatdata/${STEAM_APP_ID}" \
